[tool.poetry]
name = "slackbot"
version = "0.1.0"
description = ""
authors = ["Jiazhao Liang <jliang@flexport.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
slackeventsapi = "^3.0.3"
flask = "^3.1.0"
slack = "^0.0.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
