[tool.poetry]
name = "slackbot"
version = "0.1.0"
description = ""
authors = ["Jiazhao Liang <jliang@flexport.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
slackclient = "^2.9.4"
slack-sdk = "^3.33.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
